--- a/Modul1_Prak/index.html
+++ b/Modul1_Prak/index.html
@@ -9,69 +9,105 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="style.css" />
     <title>Dashboard</title>
   </head>
   <body>
     <header>
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
+          <a class="navbar-brand" href="#"
+            ><img class="w-75" src="../Assets/logo-ilab.png" alt=""
+          /></a>
           <button
             class="navbar-toggler"
             type="button"
             data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent"
+            data-bs-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup"
             aria-expanded="false"
             aria-label="Toggle navigation"
           >
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a
-                  class="nav-link dropdown-toggle"
-                  href="#"
-                  role="button"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
-                >
-                  Dropdown
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider" /></li>
-                  <li>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                  </li>
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-              </li>
-            </ul>
-            <form class="d-flex" role="search">
-              <input
-                class="form-control me-2"
-                type="search"
-                placeholder="Search"
-                aria-label="Search"
-              />
-              <button class="btn btn-outline-success" type="submit">
-                Search
-              </button>
-            </form>
+          <div
+            class="collapse navbar-collapse justify-content-center"
+            id="navbarNavAltMarkup"
+          >
+            <div class="navbar-nav">
+              <a class="nav-link active" href="#">HOME</a>
+              <a class="nav-link active" href="#">ABOUT US</a>
+              <a class="nav-link active" href="#">CONTACT</a>
+            </div>
           </div>
+          <button class="btn btn-outline-dark me-2 px-3 py-1">
+            <span class="fs-6">SIGN UP</span>
+          </button>
+          <button class="btn btn-primary me-3 px-4 py-1">
+            <span class="fs-6">LOG IN</span>
+          </button>
         </div>
       </nav>
     </header>
+    <div class="container-fluid hero-background">
+      <div
+        class="col-md-8 d-flex h-100 justify-content-center align-items-center"
+      >
+        <div class="text-white">
+          <h1>SELAMAT DATANG</h1>
+          <h4>Di Website Praktikum Pemrograman Website</h4>
+        </div>
+      </div>
+    </div>
+    <footer class="d-flex pt-5 justify-content-evenly">
+      <div class="d-flex align-items-center flex-column">
+        <img src="../Assets/logo-ilab.png" alt="" />
+        <p class="text-black-50 py-5">Copyright © 2022. Infinite Learning</p>
+      </div>
+      <div class="d-flex flex-column">
+        <h5>Service</h5>
+        <a href="" class="nav-link active">Email Marketing</a>
+        <a href="" class="nav-link active py-1">Campaigns</a>
+        <a href="" class="nav-link active py-1">Branding</a>
+        <a href="" class="nav-link active py-1">Offline</a>
+      </div>
+      <div class="d-flex flex-column">
+        <h5>About</h5>
+        <a href="" class="nav-link active">Our Story</a>
+        <a href="" class="nav-link active py-1">Benefit</a>
+        <a href="" class="nav-link active py-1">Team</a>
+        <a href="" class="nav-link active py-1">Careers</a>
+      </div>
+      <div class="d-flex flex-column">
+        <h5>Follow Us</h5>
+        <a href="" class="nav-link active">
+          <img
+            src="../Assets/logo-facebook.png"
+            alt=""
+            style="height: 20px; width: 10px"
+            class="logo-facebook"
+          />
+          Facebook</a
+        >
+        <a href="" class="nav-link active py-1">
+          <img
+            src="../Assets/logo-twitter.png"
+            alt=""
+            style="width: 16px"
+            class="logo-twitter"
+          />
+          Twitter</a
+        >
+        <a href="" class="nav-link active">
+          <img
+            src="../Assets/logo-instagram.png"
+            alt=""
+            style="width: 16px"
+            class="logo-instagram"
+          />
+          Instagram</a
+        >
+      </div>
+    </footer>
   </body>
 </html>
